--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 before_script:
   - npm prune
 after_success:
-  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm run  build && npm run deploy
+  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm run  build && npm run deploy'
