--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Alessandro Arnodo <alessandro@arnodo.net> (http://alessandro.arnodo.net)",
   "license": "MIT",
   "dependencies": {
-    "babel-loader": "6.2. 4",
+    "babel-loader": "6.2.4",
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
