--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node -r babel-register index.js",
     "start:build": "httpster -p 3000 -d build",
     "build": "cross-env NODE_ENV=production node -r babel-register index.js",
-    "deploy": "cp CNAME build && cd build && git init && git commit --allow-empty -m 'update site' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'deploy site' && git push git@github.com:vesparny/alessandro.arnodo.net gh-pages --force",
+    "deploy": "cp CNAME build && cd build && git init && git commit --allow-empty -m 'update site' && git checkout -b gh-pages && touch .nojekyll && echo .DS_Store > .gitignore && git add . && git commit -am 'deploy site' && git push git@github.com:vesparny/alessandro.arnodo.net gh-pages --force",
     "test": "echo \"Error: no test specified\"",
     "lint": "standard"
   },
