--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "0.23.1",
     "debug": "2.2.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "fastclick": "1.0.6",
     "highlight.js": "9.3.0",
     "httpster": "1.0.3",
     "markdown-it-emoji": "1.1.1",
