--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastclick": "1.0.6",
     "highlight.js": "9.3.0",
     "httpster": "1.0.3",
+    "keen-js": "3.4.1",
     "markdown-it-emoji": "1.1.1",
     "markdown-it-highlightjs": "2.0.0",
     "md5": "2.1.0",
