--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "2.13.0",
     "normalize.css": "4.1.1",
     "react": "15.0.2",
+    "react-disqus-thread": "0.3.1",
     "react-dom": "15.0.2",
     "react-helmet": "3.1.0",
     "react-icons": "2.0.1",
