--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "15.0.2",
     "react-disqus-thread": "0.3.1",
     "react-dom": "15.0.2",
+    "react-headroom": "1.8.4",
     "react-helmet": "3.1.0",
     "react-icons": "2.0.1",
     "rebass": "0.2.6",
