--- a/package.json
+++ b/package.json
@@ -14,53 +14,57 @@
   "author": "Alessandro Arnodo <alessandro@arnodo.net> (http://alessandro.arnodo.net)",
   "license": "MIT",
   "dependencies": {
-    "babel-loader": "6.2.4",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-2": "6.5.0",
-    "cheerio": "0.20.0",
-    "cross-env": "1.0.7",
-    "css-loader": "0.23.1",
+    "babel-eslint": "7.1.0",
+    "babel-loader": "6.2.7",
+    "babel-polyfill": "6.16.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-2": "6.18.0",
+    "cheerio": "0.22.0",
+    "cross-env": "3.1.3",
+    "css-loader": "0.25.0",
     "debug": "2.2.0",
     "extract-text-webpack-plugin": "1.0.1",
     "fastclick": "1.0.6",
-    "highlight.js": "9.3.0",
+    "file-loader": "0.9.0",
+    "highlight.js": "9.7.0",
     "httpster": "1.0.3",
     "keen-js": "3.4.1",
-    "markdown-it-emoji": "1.1.1",
+    "markdown-it-emoji": "1.3.0",
     "markdown-it-highlightjs": "2.0.0",
-    "md5": "2.1.0",
-    "metalsmith": "2.1.0",
+    "md5": "2.2.1",
+    "metalsmith": "2.2.2",
     "metalsmith-assets": "0.1.0",
     "metalsmith-better-excerpts": "0.1.7",
     "metalsmith-collections": "0.7.0",
     "metalsmith-excerpts": "1.1.0",
     "metalsmith-feed": "0.2.0",
-    "metalsmith-html-minifier": "2.0.0",
-    "metalsmith-markdownit": "0.3.0",
+    "metalsmith-html-minifier": "2.2.0",
+    "metalsmith-markdownit": "0.4.0",
     "metalsmith-pagination": "1.4.0",
     "metalsmith-permalinks": "0.5.0",
-    "metalsmith-sitemap": "1.0.0",
-    "metalsmith-tags": "1.2.1",
-    "metalsmith-watch": "1.0.1",
-    "moment": "2.13.0",
-    "normalize.css": "4.1.1",
-    "react": "15.0.2",
-    "react-disqus-thread": "0.3.1",
-    "react-dom": "15.0.2",
-    "react-headroom": "1.8.4",
+    "metalsmith-sitemap": "1.1.0",
+    "metalsmith-tags": "2.0.0",
+    "metalsmith-watch": "1.0.3",
+    "moment": "2.15.2",
+    "normalize.css": "5.0.0",
+    "react": "15.3.2",
+    "react-disqus-thread": "0.4.0",
+    "react-dom": "15.3.2",
+    "react-headroom": "2.1.3",
     "react-helmet": "3.1.0",
-    "react-icons": "2.0.1",
-    "rebass": "0.2.6",
-    "reflexbox": "1.1.2",
-    "standard": "7.0.1",
-    "stats-webpack-plugin": "0.3.1",
+    "react-icons": "2.2.1",
+    "rebass": "0.3.3",
+    "reflexbox": "2.2.2",
+    "standard": "8.5.0",
+    "stats-webpack-plugin": "0.4.2",
     "style-loader": "0.13.1",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "1.13.3",
+    "webpack-dev-server": "1.16.2"
   },
-  "devDependencies": {
-    "file-loader": "0.8.5"
+  "config": {
+    "standard": {
+      "parser": "babel-eslint"
+    }
   }
 }
