--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
+    "babel-register": "6.18.0",
     "cheerio": "0.22.0",
     "cross-env": "3.1.3",
     "css-loader": "0.25.0",
