--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "author": "Alessandro Arnodo <alessandro@arnodo.net> (https://arnodo.net)",
   "license": "MIT",
   "dependencies": {
+    "emotion": "^9.2.6",
+    "emotion-server": "^9.2.6",
+    "emotion-theming": "^9.2.6",
+    "grid-styled": "^5.0.2",
     "next": "6.1.1",
+    "normalize.css": "^8.0.0",
     "react": "16.4.2",
-    "react-dom": "16.4.2"
+    "react-dom": "16.4.2",
+    "react-emotion": "^9.2.6"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -32,7 +38,8 @@
     "eslint-plugin-standard": "^3.1.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "raw-loader": "^0.5.1"
   },
   "lint-staged": {
     "linters": {
