--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "arnodo.net",
   "version": "2.0.0",
   "description": "my personal website",
+  "main": "server.js",
   "scripts": {
-    "dev": "next",
+    "dev": "micro-dev --watch server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production micro",
     "test": "npm run lint",
     "lint": "eslint .",
     "prettier": "prettier '{pages,assets}/**/*.js' --write",
@@ -18,8 +19,9 @@
     "emotion-server": "^9.2.6",
     "emotion-theming": "^9.2.6",
     "grid-styled": "^5.0.2",
+    "micro": "^9.3.3",
+    "micro-route": "^2.5.0",
     "next": "6.1.1",
-    "normalize.css": "^8.0.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-emotion": "^9.2.6"
@@ -38,6 +40,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "micro-dev": "^3.0.0",
     "prettier": "^1.14.2",
     "raw-loader": "^0.5.1"
   },
