--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Alessandro Arnodo <alessandro@arnodo.net> (https://arnodo.net)",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/mdx": "^0.15.0",
+    "@zeit/next-mdx": "^1.1.0",
     "emotion": "^9.2.6",
     "emotion-server": "^9.2.6",
     "emotion-theming": "^9.2.6",
@@ -41,8 +43,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "micro-dev": "^3.0.0",
-    "prettier": "^1.14.2",
-    "raw-loader": "^0.5.1"
+    "prettier": "^1.14.2"
   },
   "lint-staged": {
     "linters": {
