--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   ],
   "plugins": ["react", "prettier", "standard"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off"
   },
   "globals": {}
 }
