--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "emotion-theming": "^9.2.6",
     "grid-styled": "^5.0.2",
     "micro": "^9.3.3",
+    "micro-redirect": "^1.0.0",
     "micro-route": "^2.5.0",
     "next": "6.1.1",
+    "nprogress": "^0.2.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-emotion": "^9.2.6"
