--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.15.0",
     "@zeit/next-mdx": "^1.1.0",
-    "emotion": "^9.2.6",
-    "emotion-server": "^9.2.6",
+    "brcast": "^3.0.1",
     "emotion-theming": "^9.2.6",
-    "grid-styled": "^5.0.2",
+    "github-base": "^1.0.0",
     "micro": "^9.3.3",
     "micro-redirect": "^1.0.0",
     "micro-route": "^2.5.0",
     "next": "6.1.1",
+    "now-env": "^3.1.0",
     "nprogress": "^0.2.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
-    "react-emotion": "^9.2.6"
+    "rebass": "3.0.0-0",
+    "styled-components": "4.0.0-beta.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
