--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "6.1.1",
     "now-env": "^3.1.0",
     "nprogress": "^0.2.0",
+    "polished": "^2.0.3",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "rebass": "^3.0.0-1",
