--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nprogress": "^0.2.0",
     "react": "16.5.1",
     "react-dom": "16.5.1",
+    "react-particles-js": "^2.3.0",
     "rebass": "^3.0.0-1",
     "styled-components": "4.0.0-beta.2"
   },
