--- a/package.json
+++ b/package.json
@@ -15,38 +15,38 @@
   "author": "Alessandro Arnodo <alessandro@arnodo.net> (https://arnodo.net)",
   "license": "MIT",
   "dependencies": {
-    "@mdx-js/mdx": "^0.15.0",
-    "@zeit/next-mdx": "^1.1.0",
+    "@mdx-js/mdx": "^0.16.3",
+    "@zeit/next-mdx": "^1.2.0",
     "brcast": "^3.0.1",
     "date-fns": "^1.29.0",
     "github-base": "^1.0.0",
     "micro": "^9.3.3",
     "micro-redirect": "^1.0.0",
     "micro-route": "^2.5.0",
-    "next": "7.0.0",
+    "next": "7.0.2",
     "now-env": "^3.1.0",
     "nprogress": "^0.2.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "rebass": "^3.0.0-1",
-    "styled-components": "4.0.0-beta.2"
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "rebass": "^3.0.0-11",
+    "styled-components": "4.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-prettier": "^3.0.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
     "micro-dev": "^3.0.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.15.2"
   },
   "lint-staged": {
     "linters": {
