--- a/next.arnodo.net.now.json
+++ b/next.arnodo.net.now.json
@@ -5,12 +5,4 @@
     "GIST_TOKEN": "@gist-token.next",
     "GIST_ID": "3d623b91098eac8d1b3ffd92d9ab1f13"
   },
-  "version": 2,
-  "builds": [
-    {
-      "src": "next.config.js",
-      "use": "@now/next",
-      "config": { "maxLambdaSize": "50mb" }
-    }
-  ]
-}
+  "version": 2
