--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.2.0",
     "gatsby-plugin-catch-links": "^2.0.8",
+    "gatsby-plugin-feed": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.10",
+    "gatsby-plugin-nprogress": "^2.0.6",
     "gatsby-plugin-offline": "^2.0.17",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.13",
