--- a/package.json
+++ b/package.json
@@ -1,70 +1,79 @@
 {
-  "name": "alessandro.arnodo.net",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "arnodo.net",
+  "version": "2.0.0",
+  "description": "my personal website",
+  "main": "server.js",
   "scripts": {
-    "start": "node -r babel-register index.js",
-    "start:build": "httpster -p 3000 -d build",
-    "build": "cross-env NODE_ENV=production node -r babel-register index.js",
-    "test": "echo \"Error: no test specified\"",
-    "lint": "standard"
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "dev": "gatsby develop",
+    "test": "npm run lint",
+    "lint": "eslint .",
+    "prettier": "prettier '{pages,assets}/**/*.js' --write"
   },
-  "author": "Alessandro Arnodo <alessandro@arnodo.net> (http://alessandro.arnodo.net)",
+  "author": "Alessandro Arnodo <alessandro@arnodo.net> (https://arnodo.net)",
   "license": "MIT",
   "dependencies": {
-    "babel-eslint": "7.1.0",
-    "babel-loader": "6.2.7",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-2": "6.18.0",
-    "babel-register": "6.18.0",
-    "cheerio": "0.22.0",
-    "cross-env": "3.1.3",
-    "css-loader": "0.25.0",
-    "debug": "2.2.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "fastclick": "1.0.6",
-    "file-loader": "0.9.0",
-    "highlight.js": "9.7.0",
-    "httpster": "1.0.3",
-    "keen-js": "3.4.1",
-    "markdown-it-emoji": "1.3.0",
-    "markdown-it-highlightjs": "2.0.0",
-    "md5": "2.2.1",
-    "metalsmith": "2.2.2",
-    "metalsmith-assets": "0.1.0",
-    "metalsmith-better-excerpts": "0.1.7",
-    "metalsmith-collections": "0.7.0",
-    "metalsmith-excerpts": "1.1.0",
-    "metalsmith-feed": "0.2.0",
-    "metalsmith-html-minifier": "2.2.0",
-    "metalsmith-markdownit": "0.4.0",
-    "metalsmith-pagination": "1.4.0",
-    "metalsmith-permalinks": "0.5.0",
-    "metalsmith-sitemap": "1.1.0",
-    "metalsmith-tags": "2.0.0",
-    "metalsmith-watch": "1.0.3",
-    "moment": "2.15.2",
-    "normalize.css": "5.0.0",
-    "react": "15.3.2",
-    "react-disqus-thread": "0.4.0",
-    "react-dom": "15.3.2",
-    "react-headroom": "2.1.3",
-    "react-helmet": "3.1.0",
-    "react-icons": "2.2.1",
-    "rebass": "0.3.3",
-    "reflexbox": "2.2.2",
-    "standard": "8.5.0",
-    "stats-webpack-plugin": "0.4.2",
-    "style-loader": "0.13.1",
-    "webpack": "1.13.3",
-    "webpack-dev-server": "1.16.2"
+    "@mdx-js/mdx": "^0.15.5",
+    "@mdx-js/tag": "^0.15.0",
+    "brcast": "^3.0.1",
+    "date-fns": "^1.29.0",
+    "gatsby": "^2.0.54",
+    "gatsby-image": "^2.0.20",
+    "gatsby-mdx": "^0.2.0",
+    "gatsby-plugin-catch-links": "^2.0.8",
+    "gatsby-plugin-feed": "^2.0.9",
+    "gatsby-plugin-manifest": "^2.0.10",
+    "gatsby-plugin-netlify": "^2.0.5",
+    "gatsby-plugin-nprogress": "^2.0.6",
+    "gatsby-plugin-offline": "^2.0.17",
+    "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-sharp": "^2.0.13",
+    "gatsby-plugin-styled-components": "^3.0.3",
+    "gatsby-remark-copy-linked-files": "^2.0.6",
+    "gatsby-remark-images": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.1.12",
+    "gatsby-transformer-sharp": "^2.1.8",
+    "lodash.groupby": "^4.6.0",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-helmet": "^5.2.0",
+    "rebass": "^3.0.0-11",
+    "styled-components": "4.1.1"
   },
-  "config": {
-    "standard": {
-      "parser": "babel-eslint"
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.2"
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ],
+      "*.md": [
+        "prettier --write",
+        "git add"
+      ]
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
   }
 }
