--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/tag": "^0.15.0",
     "brcast": "^3.0.1",
     "date-fns": "^1.29.0",
+    "firebase": "^5.5.9",
     "gatsby": "^2.0.54",
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.2.0",
