--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.15.5",
     "@mdx-js/tag": "^0.15.0",
-    "firebase": "^5.5.9",
     "gatsby": "^2.0.54",
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.2.0",
@@ -38,11 +37,13 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-helmet": "^5.2.0",
-    "rebass": "^3.0.0-11",
+    "rebass": "^3.1.0",
     "styled-components": "4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-preset-gatsby": "^0.1.11",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-standard": "^12.0.0",
