--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-mdx": "^0.2.0",
     "gatsby-plugin-catch-links": "^2.0.8",
     "gatsby-plugin-feed": "^2.0.9",
+    "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.0.10",
     "gatsby-plugin-netlify": "^2.0.5",
     "gatsby-plugin-nprogress": "^2.0.6",
